--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "nuka-carousel": "^4.8.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.5",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
