--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "nuka-carousel": "^4.8.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-currency-input-field": "^3.6.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
