--- a/client/package.json
+++ b/client/package.json
@@ -2,17 +2,17 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://localhost:2999",
+  "proxy": "http://localhost:2999",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "compressorjs": "^1.1.1",
     "nuka-carousel": "^4.8.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
-    "react-currency-input-field": "^3.6.0",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
