--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "compressorjs": "^1.1.1",
+    "heic2any": "^0.0.3",
     "node-sass": "^7.0.1",
     "nuka-carousel": "^4.8.4",
     "react": "^17.0.2",
