--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "nuka-carousel": "^4.8.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-compress": "^2.5.4",
     "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -27,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-compress",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
