--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,13 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "source-map-explorer": "^2.5.2",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && react-compress",
+    "build": "react-scripts build",
+    "analyze": "source-map-explorer build/static/js/*.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
