--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "source-map-explorer": "^2.5.2",
     "use-places-autocomplete": "^2.0.0",
     "web-vitals": "^2.1.2"
