--- a/client/package.json
+++ b/client/package.json
@@ -4,25 +4,21 @@
   "private": true,
   "proxy": "http://localhost:2999",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "compressorjs": "^1.1.1",
     "heic2any": "^0.0.3",
-    "node-sass": "^7.0.1",
-    "react": "^17.0.2",
+    "react": "18.2.0",
     "react-bootstrap": "^2.1.0",
     "react-compress": "^2.5.4",
-    "react-datetime": "^3.1.1",
-    "react-dom": "^17.0.2",
+    "react-datetime-picker": "^3.5.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.5",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "socket.io-client": "^4.4.1",
     "source-map-explorer": "^2.5.2",
     "use-places-autocomplete": "^2.0.0",
@@ -33,7 +29,10 @@
     "build": "react-scripts build",
     "analyze": "source-map-explorer build/static/js/*.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --resolve-plugins-relative-to . ",
+    "lint:fix": "eslint --fix --resolve-plugins-relative-to . src/**/*.jsx src/**/*.js",
+    "lint:quiet": "eslint --resolve-plugins-relative-to . --quiet src/**/*.jsx src/**/*.js"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +51,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "sass": "^1.53.0"
   }
 }
