--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,13 @@
   "proxy": "http://localhost:2999",
   "dependencies": {
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "5.2.0",
     "compressorjs": "^1.1.1",
     "heic2any": "^0.0.3",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "2.4.0",
     "react-compress": "^2.5.4",
-    "react-datetime-picker": "^3.5.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
@@ -21,8 +21,10 @@
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.4.1",
     "source-map-explorer": "^2.5.2",
+    "styled-components": "^5.3.5",
     "use-places-autocomplete": "^2.0.0",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "sass": "^1.53.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,9 +32,9 @@
     "analyze": "source-map-explorer build/static/js/*.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --resolve-plugins-relative-to . ",
-    "lint:fix": "eslint --fix --resolve-plugins-relative-to . src/**/*.jsx src/**/*.js",
-    "lint:quiet": "eslint --resolve-plugins-relative-to . --quiet src/**/*.jsx src/**/*.js"
+    "lint": "eslint 'src/**/*.jsx' 'src/**/*.js'",
+    "lint:fix": "eslint --fix 'src/**/*.jsx' 'src/**/*.js'",
+    "lint:quiet": "eslint --quiet 'src/**/*.jsx' 'src/**/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +61,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "sass": "^1.53.0"
+    "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
