--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:client": "cd client && npm start",
     "dev": "nodemon bin/www",
+    "populate:user": "node util/database/index.js --operation insert --type user",
+    "populate:creator": "node util/database/index.js --operation insert --type creator",
     "lint": "eslint --ext .js .",
     "lint:fix": "eslint --fix --ext .js .",
     "lint:quiet": "eslint --quiet --ext .js .",
@@ -32,7 +35,8 @@
     "serve": "~13.0.2",
     "socket.io": "~4.4.1",
     "stripe": "~8.197.0",
-    "stripe-cli": "~0.1.0"
+    "stripe-cli": "~0.1.0",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
