new jsx files and working modals on login

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www",
     "start:client": "cd client && npm start",
     "dev": "nodemon bin/www",
-    "populate:user": "node util/database/index.js --operation insert --type user",
-    "populate:creator": "node util/database/index.js --operation insert --type creator",
+    "populate:user": "node util/database/index.js --operation insert --type USER",
+    "populate:creator": "node util/database/index.js --operation insert --type CREATOR",
     "lint": "eslint --ext .js .",
     "lint:fix": "eslint --fix --ext .js .",
     "lint:quiet": "eslint --quiet --ext .js .",
