--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,15 @@
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.5",
     "react-router": "^6.2.1",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.53.0",
     "socket.io-client": "^4.4.1",
     "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.5",
     "use-places-autocomplete": "^2.0.0",
-    "web-vitals": "^2.1.2",
-    "sass": "^1.53.0"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
