--- a/package.json
+++ b/package.json
@@ -23,12 +23,21 @@
   },
   "homepage": "https://github.com/pluvio72/gatekeepers#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-uncapitalize": "^1.0.0",
+    "helmet": "^6.0.0",
+    "mongodb": "^4.9.1",
+    "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.14",
     "@types/shelljs": "^0.8.11",
     "nodemon": "^2.0.19",
