--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "prestart": "npm run build",
     "start": "node .",
-    "dev:start": "npm-run-all build start",
+    "dev:start": "DEBUG=express npm-run-all build start",
     "dev": "nodemon --watch src -e ts --exec npm run dev:start"
   },
   "repository": {
@@ -25,19 +25,25 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-uncapitalize": "^1.0.0",
     "helmet": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.5.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.14",
     "@types/shelljs": "^0.8.11",
     "nodemon": "^2.0.19",
